Small pom tweaks